app/assets/stylesheets/src/shared/_components.scss
// ButtonComponent styles
.btn {
  --tblr-btn-line-height: 1.5;

  &:disabled {
    border-color: var(--tblr-btn-border-color);
    background-color: var(--tblr-btn-bg);
  }

  &-tiny {
    --tblr-btn-font-size: 12px;
    --tblr-btn-padding-x: 8px;
    --tblr-btn-padding-y: 4px;

    .icon {
      --tblr-btn-icon-size: 15px;
    }
  }

  &-small {
    --tblr-btn-font-size: 14px;
    --tblr-btn-padding-x: 9px;
    --tblr-btn-padding-y: 4.5px;

    .icon {
      --tblr-btn-icon-size: 17px;
    }
  }

  &-medium {
    --tblr-btn-font-size: 16px;
    --tblr-btn-padding-x: 14px;
    --tblr-btn-padding-y: 7px;

    .icon {
      --tblr-btn-icon-size: 20px;
    }
  }

  .icon,
  .avatar {
    margin: unset;
  }
}

// TextInputComponent styles
.text-input-component {
  &-default {
    border-radius: 4px;
  }

  &-subscript {
    font-size: 14px;
    line-height: 1.5;
  }

  &-tiny {
    padding: 4px 8px;
    font-size: 12px;
  }

  &-small {
    padding: 4.5px 9px;
    font-size: 14px;
  }

  &-medium {
    padding: 7px 14px;
    font-size: 16px;
  }

  &-disabled {
    background-color: var(--tblr-bg-surface-secondary);
  }

  &-disabled:focus {
    background-color: var(--tblr-bg-surface-secondary);
  }
}

// LabelComponent styles
.label-component {
  $sizes:
    small 14px,
    medium 16px;

  @each $name, $size in $sizes {
    &-#{$name} {
      font-size: $size !important;
      line-height: 1.5 !important;
    }
  }
}

// PrettyNumberComponent styles
.pretty-number-component {
  &:after {
    content: "\00a0";
  }
}

// SelectComponent styles
.select-component {
  // Bootstrap 5 does not support the `btn-group-xs` size.
  // Used in case of a select component with the `dropdown_buttons` plugin for the `selectize` library.
  .btn-group-xs button {
    --tblr-btn-font-size: 12px;
    --tblr-btn-padding-x: 8px;
    --tblr-btn-padding-y: 4px;
  }

  --sc_chevron_padding: 8px;
  // Chevron rotation is 45deg, so the actual size is 1.41 times bigger.
  --sc_input_right_padding: calc(var(--sc_chevron_size) * 1.41 + var(--sc_chevron_padding));

  // Imitate tabler dropdown toggle icon.
  &.with-chevron .selectize-input:after {
    border-color: unset !important;
    border-style: unset !important;

    border-bottom-style: var(--tblr-border-style) !important;
    border-left-style: var(--tblr-border-style) !important;
    transform: rotate(-45deg) translateY(-50%);
    border-width: 1px !important;

    margin-top: calc(var(--sc_chevron_size) / -2) !important;
    width: var(--sc_chevron_size) !important;
    height: var(--sc_chevron_size) !important;
    right: var(--sc_chevron_padding);
  }

  .selectize-input {
    border-radius: 4px !important;
    vertical-align: middle; // Fix the height of the component.
    background-color: var(--tblr-bg-forms);
    border-color: var(--tblr-border-color);

    &.focus {
      border-color: #83b7e8 !important;

      box-shadow:
        $box-shadow-input,
        0 0 0 0.25rem rgba(var(--tblr-primary-rgb), 0.25);
    }

    &.locked {
      background-color: var(--tblr-bg-surface-secondary) !important;
      opacity: 1 !important;
    }

    &.disabled {
      cursor: default !important;

      .item {
        color: var(--tblr-gray-500) !important;
      }
    }

    input {
      &::placeholder {
        color: var(--tblr-gray-400);
      }

      @extend .text-truncate;
      cursor: text !important;
      color: var(--tblr-body-color);
    }

    .item {
      color: var(--tblr-body-color) !important;
    }
  }

  // Start of sizes.
  &.tiny {
    --sc_font_size: 12px;
    --sc_min_height: 28px;
    --sc_chevron_size: 0.4em;
    --sc_check_size: 0.7em;

    &.with-chevron .selectize-input {
      padding: 4px var(--sc_input_right_padding) 4px 8px !important;
    }

    .selectize-input {
      min-height: var(--sc_min_height) !important;
      padding: 4px 8px !important;
      font-size: var(--sc_font_size);
    }
  }

  &.small {
    --sc_font_size: 14px;
    --sc_min_height: 32px;
    --sc_chevron_size: 0.5em;
    --sc_check_size: 0.8em;

    &.with-chevron .selectize-input {
      padding: 4.5px var(--sc_input_right_padding) 4.5px 9px !important;
    }

    .selectize-input {
      min-height: var(--sc_min_height) !important;
      padding: 4.5px 9px !important;
      font-size: var(--sc_font_size);
    }
  }

  &.medium {
    --sc_font_size: 16px;
    --sc_min_height: 40px;
    --sc_chevron_size: 0.7em;
    --sc_check_size: 0.9em;

    &.with-chevron .selectize-input {
      padding: 7px var(--sc_input_right_padding) 7px 14px !important;
    }

    .selectize-input {
      min-height: var(--sc_min_height) !important;
      padding: 7px 14px !important;
      font-size: var(--sc_font_size);
    }
  }
  // End of sizes.

  // Start of types.
  &.single {
    width: 100%;

    .selectize-input {
      // Prevent displaying an additional empty line when selecting the long option.
      overflow: clip;
      white-space: nowrap;

      .item {
        vertical-align: top;
        @extend .text-truncate;
      }
    }
  }

  &.multiple {
    @extend .single;

    // Add an ellipsis if there is more than 1 selected item.
    .selectize-input:has(.item:nth-of-type(2)) {
      text-overflow: ellipsis;
    }

    .item {
      padding: 0 !important;
      margin: 0rem !important;

      background-color: inherit !important;

      &:not(:first-child):before {
        content: ", ";
      }
    }

    // Check icon for selected options.
    .selected:after {
      content: "";
      left: 100%;
      position: sticky;
      display: inline-block;

      border-bottom-style: var(--tblr-border-style);
      border-left-style: var(--tblr-border-style);
      transform: rotate(-45deg) translateY(-50%);
      border-width: 1px;

      width: var(--sc_check_size);
      height: calc(var(--sc_check_size) / 1.7);
    }
  }

  &.pill {
    .items:has(.item) {
      display: flex;
      flex-wrap: wrap;
      gap: 4px;
    }

    .item {
      padding-top: 0 !important;
      padding-bottom: 0 !important;
      margin: 0rem !important;
      border-radius: 4px !important;

      // Tabler badge styles
      background: var(--tblr-bg-surface-secondary) !important;
      border: 1px solid var(--tblr-gray-200) !important;
      color: var(--tblr-gray-500) !important;
      font-weight: var(--tblr-font-weight-bold);

      .remove {
        border: none !important;
        padding-top: 0 !important;
        padding-bottom: 0 !important;
      }
    }

    .locked .item {
      background-color: white !important;
    }
  }

  &.html {
    .selectize-input {
      .item {
        max-width: 100%;
      }
    }
    @extend .single;
  }
  // End of types.
}

// The select component dropdown could be anchored to the page body.
// In this case we moved the dropdown styles out of the `.select-component` class.
.selectize-dropdown {
  // variable that did not exists in tabler but used by selectize.
  --bs-border-color-translucent: var(--tblr-border-color-translucent);

  border-radius: 4px;
  box-shadow: none !important;
  color: var(--tblr-gray-800);

  .selected {
    // disabled options.
    background-color: white;
    color: var(--tblr-gray-800);

    // not disabled options.
    &[data-selectable] {
      background-color: rgba(var(--tblr-blue-rgb), 0.04);
      color: var(--tblr-blue);
    }
  }

  .option {
    padding-top: 0.5rem;
    padding-bottom: 0.5rem;
    font-size: var(--sc_font_size);

    &.active[data-selectable] {
      background-color: rgba(var(--tblr-gray-500-rgb), 0.08);
      color: var(--tblr-gray-800);
    }
  }

  .selectize-dropdown-content {
    max-height: 200px;
    padding-top: 0.25rem;
    padding-bottom: 0.25rem;
  }

  .selectize-dropdown-emptyoptionlabel {
    text-align: left;
  }
}

.icon-component {
  $sizes:
    tiny 15px,
    small 17px,
    medium 20px,
    large 29px;

  @each $name, $size in $sizes {
    &.icon-component-#{$name} {
      --tblr-icon-size: #{$size};
      --tblr-btn-icon-size: #{$size};
    }
  }
}

.icon-button-component {
  @extend .btn;

  display: inline-flex;
  align-items: center;
  justify-content: center;

  &.ghost {
    border: 1px solid transparent;
    background-color: transparent;
    color: $gray-500;

    &:hover {
      color: $gray-900;
    }

    &:active {
      background-color: transparent;
      border-color: transparent;
    }

    &:focus {
      color: $gray-900;
      box-shadow: 0 0 0 0.25rem rgba(28, 109, 208, 0.25);
    }
  }

  $sizes:
    tiny 15px 5.5px,
    small 17px 6.5px,
    medium 20px 9px;

  @each $name, $size, $padding in $sizes {
    &.icon-#{$name} {
      // size of the icon + padding * 2 (both side) + border width (each 1px)
      $button-size: calc($size + ($padding * 2) + 2px);
      width: $button-size;
      height: $button-size;
      padding: $padding;
    }
  }
}

